--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,12 +1,25 @@
 body {
 	text-align: center;
-	margin: auto;
-	margin-bottom: 50px;
+	font-family: 'Happy Monkey', cursive;
+}
+
+html { 
+	background: url(../images/simba.jpg) no-repeat center center fixed; 
+	-webkit-background-size: cover;
+	-moz-background-size: cover;
+	-o-background-size: cover;
+	background-size: cover;
+}
+
+#container {
+	width: 500px;
+	position: relative;
+	left: 250px;
+	top: 80px;
 }
 
 #timer,
 #questions,
-#msg,
 #play {
 	display: none;
 }
@@ -14,11 +27,37 @@ body {
 p:hover {
 	border: 2px solid black;
 	background-color: lightpink; 
-	width: 200px;
+	width: 450px;
+	height: 25px;
 	margin: auto;
-	cursor: pointer;;
+	cursor: pointer;
 }
 
 img {
 	width: 300px;
+}
+
+h1 {
+	font-family: 'Wendy One', sans-serif;
+	/*font-family: 'Titan One', cursive;*/
+	font-size: 45px;
+}
+
+#msg1,
+#msg2,
+#msg3 {
+	font-size: 23px;
+	font-weight: bolder;
+}
+
+#questions p {
+	font-size: 17px;
+	font-weight: bold;
+}
+
+button {
+	width: 200px;
+	height: 35px;
+	font-size: 20px;
+	font-family: 'Happy Monkey', cursive;
 }
